--- a/background/background.html
+++ b/background/background.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <script src="/js/chrome-wrapper.js"></script>
+<script src="/js/constants.js"></script>
 <script src="background.js"></script>
 </head>
 <body>
