--- a/options/options.html
+++ b/options/options.html
@@ -7,12 +7,14 @@
 
 <script src="/external/jquery-2.1.3.min.js"></script>
 <script src="/external/bootstrap-3.3.1/js/bootstrap.min.js"></script>
+<script src="/js/chrome-wrapper.js"></script>
+<script src="options.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <button type="button" class="navbar-toggle _collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -22,9 +24,9 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Summary</a></li>
-            <li><a href="#dmm">DMM</a></li>
-            <li><a href="#sbi">SBI</a></li>
+            <li><a href="#summary" data-toggle="tab">Summary</a></li>
+            <li class="active"><a href="#dmm" data-toggle="tab">DMM</a></li>
+            <li><a href="#sbi" data-toggle="tab">SBI</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -35,6 +37,18 @@
       <div class="starter-template">
         <h1>Bootstrap starter template</h1>
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+      </div>
+
+      <div class="tab-content">
+        <div class="tab-pane fade" id="summary">
+          summary
+        </div>
+        <div class="tab-pane fade in active" id="dmm">
+          <button id="dmm_scraping_btn" class="btn btn-default">Start Scraping</button>
+        </div>
+        <div class="tab-pane fade" id="sbi">
+          bbb
+        </div>
       </div>
 
     </div><!-- /.container -->
